--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
     .main {
       height: 100%;
-      background-image: url("./assets/bg.webp");
+      background-image: url("./assets/right_faced_rhino.webp"), url("./assets/left_faced_rhino.webp");
       background-repeat: no-repeat;
-      background-size: contain;
-      background-position: center;
+      background-size: 600px, 750px;
+      background-position: left bottom, right top;
       max-width: 1200px;
       margin: 0 auto;
       /* background-origin: ; */
