overlay image added

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     .main {
       height: 100%;
-      background-image: url("./assets/right_faced_rhino.webp"), url("./assets/left_faced_rhino.webp");
+      background-image: url("./assets/right_faced_rhino.webp"), url("./assets/left_faced_rhino.webp"), url("./assets/overlay.png");
       background-repeat: no-repeat;
-      background-size: 600px, 750px;
+      background-size: 600px, 750px, 650px;
       background-position: left bottom, right top;
       max-width: 1200px;
       margin: 0 auto;
