--- a/index.html
+++ b/index.html
@@ -84,11 +84,39 @@
       pointer-events: none;
       content: ''
     }
+
+    #dotContainer {
+      display: flex;
+      gap: 8px;
+      padding: 18px;
+      flex-wrap: wrap;
+      position: fixed;
+      left: 0;
+    }
+
+    .dot {
+      display: inline-flex;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+    }
+
+    @media screen and (max-width: 600px) {
+      .main {
+        background-image: none;
+      }
+
+      .content {
+        padding-top: 50px;
+        padding-left: 50px;
+      }
+    }
   </style>
 </head>
 
 <body>
   <main class="main">
+    <div id="dotContainer"></div>
     <div class="content">
       <h1 class="name">Arunkumar</h1>
       <h3 class="likes">CSS Lover</h3>
@@ -99,6 +127,27 @@
       <h2>I built Web Applications too ...</h2>
     </article>
   </main>
+  <script>
+    function generateColor() {
+      // console.log("----------")
+      const hexArray = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'A', 'B', 'C', 'D', 'E', 'F'];
+      let code = "";
+      for (let i = 0; i < 6; i++) {
+        code += hexArray[Math.floor(Math.random() * 16)];
+      }
+      return `#${code}`
+    }
+    const intervalID = setInterval(() => {
+      const el = document.createElement("span")
+      el.setAttribute("style", "background-color:" + generateColor() + "; ")
+      el.setAttribute("class", "dot")
+      const dotContainer = document.querySelector("#dotContainer")
+      dotContainer.append(el)
+    }, 300)
+    setTimeout(() => {
+      clearInterval(intervalID)
+    }, 1000 * 60 * 2)
+  </script>
 </body>
 
 </html>
