--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
+      font-family: helvetica;
     }
 
     *,
@@ -101,6 +102,11 @@
       border-radius: 50%;
     }
 
+    .download-btn {
+      font-size: 16px;
+      padding: 0.25rem 0.5rem;
+    }
+    
     @media screen and (max-width: 600px) {
       .main {
         background-image: none;
@@ -125,6 +131,7 @@
     <article>
       <h3>Important Note : -</h3>
       <h2>I built Web Applications too ...</h2>
+      <a href="./assets/arunresume.pdf" download=""><button>Download Resume</button></a>
     </article>
   </main>
   <script>
